fix mobile spacing

--- a/src/components/ForecastDay/ForecastDay.css
+++ b/src/components/ForecastDay/ForecastDay.css
@@ -18,12 +18,10 @@
 
 .icon-col {
   padding: 0 12px;
-  margin-top: -10px;
 }
 
 .icon-txt {
   font-size: 16px;
-  margin-top: -12px;
 }
 
 .temp-col {
@@ -52,7 +50,6 @@
 
   .weekday-col {
     text-align: left;
-    /* max-width: 90px; */
   }
 
   .icon-col {
@@ -77,7 +74,6 @@
   }
   
   .weather-card {
-    /* max-width: 150px; */
     margin: 0;
     padding: 0px;
   }
@@ -88,9 +84,8 @@
     text-align: center;
   }
 
-  .icon-col,
-  .temp-col {
-    margin-top: 10px;
+  .icon-col {
+    margin-top: 20px;
   }
 }
 
@@ -100,11 +95,9 @@
 
 /* ICONS */
 i[class^='icon-'] {
-  font-family: icomoon;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
-  font-size: 56px;
-  width: 56px;
+  font-size: 48px;
 }
 
 i.icon-clear::before {
