--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -13,8 +13,12 @@
 @media (min-width: 0px) {
   #title-col,
   #address-input-col {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  #title-col {
+    margin-left: 10px;
   }
 
   #search-bar-div {
