--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -2,7 +2,7 @@
   /* border: thistle 1px solid; */
   font-family: neue-haas-unica, sans-serif;
   font-weight: 250;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 #forecast-col {
